--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -12,60 +12,60 @@
       </mat-autocomplete>
     </mat-form-field>
     <mat-list>
-      <mat-list-item>Khách hàng: <span class="side-spacer"></span>{{currentSO.customer.customerName}}</mat-list-item>
+        <mat-list-item>Khách hàng: <span class="side-spacer"></span>{{ so.customer.first_name + ' ' + so.customer.last_name }}</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item>Điểm tích luỹ: <span class="side-spacer"></span>{{currentSO.customer.customerPoints}}</mat-list-item>
+      <mat-list-item>Điểm tích luỹ: <span class="side-spacer"></span>{{so.customer.customer_points}}</mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
   </div>
   <mat-list class="bottom-spacer">
       <mat-list-item>
-        Thành tiền 
-        <span class="side-spacer"></span>
-        {{currentSO.subTotal}}
+          Thành tiền
+          <span class="side-spacer"></span>
+          {{so.order_total}}
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <!--<mat-list-item>
+      Đổi điểm &nbsp;
+      <mat-form-field class="point-exchanged">
+        <input matInput type="number" class="right" value="{{so.customer.exchangedPoints}}" />
+      </mat-form-field>
+      ({{so.customer.exchangedRate}}đ / Điểm)
+      <span class="side-spacer"></span>
+      {{so.customer.exchangedPoints * currentSO.exchangedRate}}
+    </mat-list-item>-->
+      <mat-divider></mat-divider>
+      <mat-list-item>
+          <b>Tổng tiền</b>
+          <span class="side-spacer"></span>
+          {{so.order_total}}
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item>
-        Đổi điểm &nbsp;
-        <mat-form-field class="point-exchanged">
-          <input matInput type="number" class="right" value="{{currentSO.exchangedPoints}}" />
-        </mat-form-field> 
-        ({{currentSO.exchangedRate}}đ / Điểm)
-        <span class="side-spacer"></span>
-        {{currentSO.exchangedPoints * currentSO.exchangedRate}}
+          Khách hàng đưa
+          <span class="side-spacer"></span>
+          <mat-form-field>
+              <input matInput type="number" class="right" value="{{so.order_total}}" />
+          </mat-form-field>
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item>
-        <b>Tổng tiền</b>
-        <span class="side-spacer"></span>
-        {{currentSO.total}}
+          Tiền thừa trả lại khách
+          <span class="side-spacer"></span>
+          {{so.customer.refunded_amount}}
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item>
-        Khách hàng đưa
-        <span class="side-spacer"></span>
-        <mat-form-field>
-          <input matInput type="number" class="right" value="{{currentSO.customerPay}}" />
-        </mat-form-field>
-      </mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item>
-        Tiền thừa trả lại khách
-        <span class="side-spacer"></span>
-        {{currentSO.refund}}
-      </mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item>
-        <mat-form-field floatLabel="never">
-          <textarea placeholder="Ghi chu" type="text" matInput>{{currentSO.notes}}</textarea>
-        </mat-form-field>
+          <mat-form-field floatLabel="never">
+              <textarea placeholder="Ghi chú" type="text" matInput>{{so.customer.checkout_attribute_description}}</textarea>
+          </mat-form-field>
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-toolbar color="primary">
-        <span class="checkout-title">
-          <mat-icon class="md-36">print</mat-icon>&nbsp;
-          Thanh toán (F9)
-        </span>
+          <span class="checkout-title" (click)="releaseSalesOrder()" style="cursor:pointer">
+              <mat-icon class="md-36">print</mat-icon>&nbsp;
+              Thanh toán (F9)
+          </span>
       </mat-toolbar>
   </mat-list>
   
