--- a/src/app/components/order-history/order-history.component.scss
+++ b/src/app/components/order-history/order-history.component.scss
@@ -1,67 +1,73 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-@import '../../@theme/styles/themes';
+.main-container {
+    width: 100%;
+    height: 100%;
+    
+}
 
+.main-sidenav-content {
+    height: 100%;
+}
 
-@include nb-install-component() {
-  .solar-card nb-card-header {
-    border: none;
-    padding-bottom: 0;
-  }
-
-  /deep/ table {
-    tbody {
-      tr {
-        th {
-          font-weight: normal;
-        }
-      }
-    }
-  }
-
-  order-container {
+.main-sidenav {
+    border-left: #eee solid 1px;
+    background-color: #f2f2f2;
     display: flex;
     flex-direction: column;
-    min-width: 300px;
-  }
+}
 
-  .mat-table {
-    overflow: auto;
-    max-height: 500px;
-  }
-
-  .table-header {
-    min-height: 64px;
-    padding: 8px 24px 0;
-  }
-
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-
-  /deep/ .mat-input-element {
-    border-bottom: 1px solid #f37022;
+mat-sidenav {
     width: 20%;
-    margin-bottom: -26px;
-  }
+    min-width: 350px;
+}
 
-  /deep/ mat-table {
-    mat-header-row {
-      mat-header-cell {
-        color: #4b4b4b;
-        font-size: 15px;
-        font-weight: bold;
-      }
-    }
-  }
+mat-toolbar {
+    height: 50px;
+}
 
-  /deep/ mat-table {
-    mat-header-row {
-      mat-header-cell {
-        .cdk-visually-hidden {
-          display: none;
+.mat-primary {
+    background: #f37022;
+    color: #fff;
+}
+
+.icon-spacer {
+    width: 10px;
+}
+
+.account-icon {
+    margin-top: -24px;
+    margin-left: -12px;
+}
+
+.side-spacer {
+    flex: 1 1 auto;
+}
+
+.material-icons.md-36 {
+    font-size: 36px;
+}
+
+.material-icons.md-48 {
+    font-size: 48px;
+}
+
+.header-title {
+    font-size: 12px;
+}
+
+app-so-summary {
+    flex-grow: 1;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+}
+/deep/ .order-container {
+    .table-header {
+        mat-form-field {
+            padding-top:10px;
+            background: none;
         }
-      }
     }
-  }
+}
+form > mat-form-field .mat-form-field-underline {
+    display: none !important;
 }
