--- a/src/app/components/lines/lines.component.html
+++ b/src/app/components/lines/lines.component.html
@@ -17,14 +17,20 @@
             <th scope="row">{{item.product.sku}}</th>
             <th scope="row">{{item.product.name}}</th>
             <th scope="row" class="text-right">
-                <input type="number" class="text-right" [ngModel]="item.price_incl_tax"
-                       (ngModelChange)="item.price_incl_tax=$event" style="max-width:100px; border: none;border-bottom:1px #e9ecef solid" (keyup)="onChange(item)" />
+            <input type="text" class="text-right" 
+                   appCurrencyFormatter [ngModel]="item.price_incl_tax" 
+                   (ngModelChange)="item.price_incl_tax=$event" 
+                   style="max-width:70px; border: none;border-bottom:1px #e9ecef solid" 
+                   (keyup)="onChange(item)" />
             </th>
             <th scope="row" class="text-right">
-                <input type="number" class="text-right" [ngModel]="item.quantity"
-                       (ngModelChange)="item.quantity=$event" style="max-width:70px; border: none; border-bottom:1px #e9ecef solid" (keyup)="onChange(item)" />
-            </th>
-            <th scope="row" class="text-right" style="padding-right:20px">{{item.total_amount}}</th>
+            <input class="text-right" 
+                   appCurrencyFormatter [ngModel]="item.quantity" 
+                   (ngModelChange)="item.quantity=$event" style="max-width:70px; border: none;border-bottom:1px #e9ecef solid" 
+                   (keyup)="onChange(item)" /></th>
+
+
+            <th scope="row" class="text-right" style="padding-right:20px;">{{item.total_amount | amountConverter}}</th>
         </tr>
     </tbody>
 </table>
