--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,10 +4,10 @@
             <app-searchbar></app-searchbar>
             <span class="side-spacer"></span>
             <mat-icon>history</mat-icon> <span class="header-title">
-                <a href="/soh" style="color: #fff;text-decoration: none;">Lịch sử đơn hàng</a>
+                <a routerLink="soh" style="color: #fff;text-decoration: none;">Lịch sử đơn hàng</a>
             </span>
             <span class="icon-spacer"></span>
-            <mat-icon>language</mat-icon> <span class="header-title">Ngôn ngữ</span>
+            <!--<mat-icon>language</mat-icon> <span class="header-title">Ngôn ngữ</span>-->
         </mat-toolbar>
         <mat-toolbar>
             <mat-chip-list>
