--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -1,31 +1,31 @@
-  <div class="line-fixed">
+<div class="line-fixed">
     <mat-form-field floatLabel="never" class="customer-search-box">
-      <input type="text" matInput placeholder="Tìm kiếm khách hàng (F4)" [formControl]="customerSearch" [matAutocomplete]="auto">
-      <mat-icon matPrefix>search</mat-icon>
-      <mat-autocomplete autoActiveFirstOption [displayWith]="displayCustomerOption" #auto="matAutocomplete">
-        <mat-option *ngFor="let c of customers" [value]="c" (onSelectionChange)="customerSelected(c)" >
-          <div class="sm-list-search-results-item">
-            <div class="line"> <b class="title">{{ c.first_name + ' ' + c.last_name }}</b></div>
-            <mat-divider></mat-divider>
-          </div>
-        </mat-option>
-      </mat-autocomplete>
+        <input type="text" matInput placeholder="Tìm kiếm khách hàng (F4)" [formControl]="customerSearch" [matAutocomplete]="auto">
+        <mat-icon matPrefix>search</mat-icon>
+        <mat-autocomplete autoActiveFirstOption [displayWith]="displayCustomerOption" #auto="matAutocomplete">
+            <mat-option *ngFor="let c of customers | async" [value]="c" (onSelectionChange)="customerSelected(c)">
+                <div class="sm-list-search-results-item">
+                    <div class="line"> <b class="title">{{ c.first_name + ' ' + c.last_name }}</b></div>
+                    <mat-divider></mat-divider>
+                </div>
+            </mat-option>
+        </mat-autocomplete>
     </mat-form-field>
     <mat-list>
         <mat-list-item>Khách hàng: <span class="side-spacer"></span>{{ so.customer.first_name + ' ' + so.customer.last_name }}</mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item>Điểm tích luỹ: <span class="side-spacer"></span>{{so.customer.customer_points}}</mat-list-item>
-      <mat-divider></mat-divider>
+        <mat-divider></mat-divider>
+        <mat-list-item>Điểm tích luỹ: <span class="side-spacer"></span>{{so.customer.customer_points}}</mat-list-item>
+        <mat-divider></mat-divider>
     </mat-list>
-  </div>
-  <mat-list class="bottom-spacer">
-      <mat-list-item>
-          Thành tiền
-          <span class="side-spacer"></span>
-          {{so.order_total}}
-      </mat-list-item>
-      <mat-divider></mat-divider>
-      <!--<mat-list-item>
+</div>
+<mat-list class="bottom-spacer">
+    <mat-list-item>
+        Thành tiền
+        <span class="side-spacer"></span>
+        {{so.order_total | amountConverter}}
+    </mat-list-item>
+    <mat-divider></mat-divider>
+    <!--<mat-list-item>
       Đổi điểm &nbsp;
       <mat-form-field class="point-exchanged">
         <input matInput type="number" class="right" value="{{so.customer.exchangedPoints}}" />
@@ -34,38 +34,41 @@
       <span class="side-spacer"></span>
       {{so.customer.exchangedPoints * currentSO.exchangedRate}}
     </mat-list-item>-->
-      <mat-divider></mat-divider>
-      <mat-list-item>
-          <b>Tổng tiền</b>
-          <span class="side-spacer"></span>
-          {{so.order_total | amountConverter}}
-      </mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item>
-          Khách hàng đưa
-          <span class="side-spacer"></span>
-          <mat-form-field>
-              <input matInput type="number" class="right" value="{{so.order_total | amountConverter}}" />
-          </mat-form-field>
-      </mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item>
-          Tiền thừa trả lại khách
-          <span class="side-spacer"></span>
-          {{so.customer.refunded_amount}}
-      </mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item>
-          <mat-form-field floatLabel="never">
-              <textarea placeholder="Ghi chú" type="text" matInput>{{so.customer.checkout_attribute_description}}</textarea>
-          </mat-form-field>
-      </mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-toolbar color="primary">
-          <span class="checkout-title" (click)="releaseSalesOrder()" style="cursor:pointer">
-              <mat-icon class="md-36">print</mat-icon>&nbsp;
-              Thanh toán (F9)
-          </span>
-      </mat-toolbar>
-  </mat-list>
-  
+    <mat-divider></mat-divider>
+    <mat-list-item>
+        <b>Tổng tiền</b>
+        <span class="side-spacer"></span>
+        {{so.order_total | amountConverter}}
+    </mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>
+        Khách hàng đưa
+        <span class="side-spacer"></span>
+
+        <input matInput class="right"
+               type="text"
+               appCurrencyFormatter [ngModel]="so.pay_amount"
+               (ngModelChange)="so.pay_amount=$event" style="border-bottom:1px #e9ecef solid"
+               (keyup)="onChange()" />
+
+    </mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>
+        Tiền thừa trả lại khách
+        <span class="side-spacer"></span>
+        {{so.return_amount | amountConverter}}
+    </mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>
+        <mat-form-field floatLabel="never">
+            <textarea placeholder="Ghi chú" type="text" matInput>{{so.customer.checkout_attribute_description}}</textarea>
+        </mat-form-field>
+    </mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-toolbar color="primary">
+        <span class="checkout-title" (click)="releaseSalesOrder()" style="cursor:pointer">
+            <mat-icon class="md-36">print</mat-icon>&nbsp;
+            Thanh toán (F9)
+        </span>
+    </mat-toolbar>
+</mat-list>
