--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -37,3 +37,4 @@
         <app-so-summary [(so)]="currentSO"></app-so-summary>
     </mat-sidenav>
 </mat-sidenav-container>
+<app-print [(so)]="currentSO"></app-print>
