--- a/src/app/components/searchbar/searchbar.component.css
+++ b/src/app/components/searchbar/searchbar.component.css
@@ -31,6 +31,21 @@
 .mat-input-placeholder {
     color: peachpuff;
 }
+
+/deep/ .mat-input-underline {
+    display: none;
+}
+
 /deep/ .mat-form-field-flex {
     align-items: flex-end !important;
+}
+
+/deep/ .mat-form-field-infix {
+    border-top: 0px solid transparent;
+    padding: 7px 0;
+    font-size: 19px;
+}
+/deep/ .mat-form-field-flex .mat-form-field-prefix mat-icon {
+    font-size: 28px;
+    color: #cccccc;
 }
